Show progress on main demo page.

--- a/demo/index.html
+++ b/demo/index.html
@@ -33,6 +33,12 @@
       autoplay
       style="border: 1px solid #333; width: 500px; height: 500px"></video>
   </div>
+  <div>
+    <h6>Progress</h6>
+    <div id="packets"></div>
+    <div id="blocks"></div>
+    <div id="finish"></div>
+  </div>
 </div>
 
 <!-- div class="container">
