Add `fps` input to demo.

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,8 @@
     <button id="present">Present</button>
     <button id="receive">Receive</button>
     <button id="camera">Camera</button>
+    <span>FPS: <input id="fps" type="number" maxlength="2" value="30"
+        style="width: 60px"></input></span>
   </div>
   <div style="display: flex; justify-content: space-between">
     <canvas
