Improve demo ergonomics (show only canvas/video at one time).

--- a/demo/index.html
+++ b/demo/index.html
@@ -32,8 +32,9 @@
       id="canvas"
       style="border: 1px solid #333; width: 500px; height: 500px"></canvas>
     <video
+      id="video"
       autoplay
-      style="border: 1px solid #333; width: 500px; height: 500px"></video>
+      style="border: 1px solid #333; width: 500px; height: 500px; display: none"></video>
   </div>
   <div>
     <h6>Progress</h6>
