Add block size input to demo UI.

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,8 @@
     <button id="camera">Camera</button>
     <span>FPS: <input id="fps" type="number" maxlength="2" value="30"
         style="width: 60px"></input></span>
+    <span>BLOCK SIZE: <input id="size" type="number" value="300"
+        style="width: 80px"></input></span>
   </div>
   <div style="display: flex; justify-content: space-between">
     <canvas
