Adjust demo control panel layout.

--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,8 @@
     <button id="present">Present</button>
     <button id="receive">Receive</button>
     <button id="camera">Camera</button>
+  </div>
+  <div>
     <span>FPS: <input id="fps" type="number" maxlength="2" value="30"
         style="width: 60px"></input></span>
     <span>BLOCK SIZE: <input id="size" type="number" value="300"
