Add video attributes to attempt to get iOS working.

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,6 +62,8 @@
     <video
       id="video"
       autoplay
+      muted
+      playsinline
       style="border: 1px solid #333; width: 500px; height: 500px; display: none"></video>
   </div>
   <h6 id="presenting"></h6>
