--- a/demo/index.html
+++ b/demo/index.html
@@ -40,8 +40,8 @@
     <span>DATA SIZE:
       <select id="size" style="width: 80px; display: inline-block">
         <option value="4096">4k</option>
-        <option value="1024" selected>1k</option>
-        <option value="512">512b</option>
+        <option value="1024">1k</option>
+        <option value="512" selected>512b</option>
         <option value="256">256b</option>
       </select>
     </span>
