--- a/demo/index.html
+++ b/demo/index.html
@@ -39,10 +39,10 @@
   <div>
     <span>DATA SIZE:
       <select id="size" style="width: 80px; display: inline-block">
-        <option value="4096">4k</option>
-        <option value="1024">1k</option>
-        <option value="512" selected>512b</option>
-        <option value="256">256b</option>
+        <option value="4096">4kiB</option>
+        <option value="1024">1kiB</option>
+        <option value="512" selected>512B</option>
+        <option value="256">256B</option>
       </select>
     </span>
     <span>BLOCK SIZE: <input id="block-size" type="number" value="400"
